@@ -17,6 +17,9 @@
 #' @param stylesheet Stylesheet(s) to include within the document (should be
 #'   specified relative to the \code{path} parameter).
 #' @param head Arbitrary lines of HTML to insert into the document head
+#' @param includeSrcDir Whether to copy the entire dir indicated by \code{src},
+#'   or only the specific files in the \code{script} and \code{stylesheet}
+#'   arguments.
 #'
 #' @return An object that can be included in a list of dependencies passed to
 #'   \code{\link{attachDependencies}}.
@@ -37,7 +40,8 @@ htmlDependency <- function(name,
                            meta = NULL,
                            script = NULL,
                            stylesheet = NULL,
-                           head = NULL) {
+                           head = NULL,
+                           includeSrcDir = TRUE) {
   srcNames <- names(src)
   if (is.null(srcNames))
     srcNames <- rep.int("", length(src))
@@ -52,7 +56,8 @@ htmlDependency <- function(name,
     meta = meta,
     script = script,
     stylesheet = stylesheet,
-    head = head
+    head = head,
+    includeSrcDir = includeSrcDir
   ))
 }
 
@@ -169,8 +174,13 @@ copyDependencyToDir <- function(dependency, outputDir, mustWork = TRUE) {
   if (!file.exists(target_dir)) {
     dir.create(target_dir)
 
-    srcfiles <- file.path(dir, list.files(dir))
-    destfiles <- file.path(target_dir, list.files(dir))
+    files <- if (is.null(dependency$includeSrcDir) || isTRUE(dependency$includeSrcDir)) {
+      list.files(dir)
+    } else {
+      c(dependency$script, dependency$stylesheet)
+    }
+    srcfiles <- file.path(dir, files)
+    destfiles <- file.path(target_dir, files)
     isdir <- file.info(srcfiles)$isdir
     destfiles <- ifelse(isdir, dirname(destfiles), destfiles)
 
